@@ -1,6 +1,10 @@
 Changes since version 1.1.0
 ---------------------------
 
+- Added support for a default object factory, similar to the semantics of servant
+  locators. Specifically, a factory registered with an empty type id is invoked
+  when a type-specific factory cannot not be found.
+
 - Added Ice::Properties::parseIceCommandLineOptions(). This operation converts to
   properties all options that start with one of the following prefixes:
   --Ice, --IceBox, --IcePack, --IcePatch, --IceSSL, --IceStorm, --Freeze, and --Glacier.
@@ -19,8 +23,7 @@ Changes since version 1.1.0
 
 - Added Linux/SPARC port from Ferris McCormick
 
-- Fixed a bug where daemonized Ice::Application wouldn't shutdown
-  properly.
+- Fixed a bug where daemonized Ice::Application wouldn't shutdown properly.
 
 - Major Freeze update:
 
